--- a/instalacoes.html
+++ b/instalacoes.html
@@ -29,6 +29,9 @@
                     <li><a href="#" onclick="js.abreSolicitacoes();">minhas solicitações</a></li>
                 </ul>
             </div>
+            <div id="instalacoes">
+
+            </div>
         </div>
         <div id="footer">
             refresh
