--- a/checkout.html
+++ b/checkout.html
@@ -13,25 +13,25 @@
     <body>
         <div id="header">
             <div id="simple-menu" href="#sidr" onclick="js.ajustaHeader();">
-                menu
-                checkout
+               <div class="menu-icon"> </div>
+            <div class="thename"> Check-out </div>
+                <div class="notification"><a href="#" onclick="js.abreSolicitacoes();"> </a> </div>
             </div>
         </div>
         <div id="body">
             <div id="sidr">
                 <ul>
-                    <li><a href="#" onclick="js.abreCardapio();">cardápio</a></li>
-                    <li><a href="#" onclick="js.abreServicos();">serviço de quarto</a></li>
-                    <li><a href="#" onclick="js.abreAtividades();">atividades</a></li>
-                    <li><a href="#" onclick="js.abreInstalacoes();">instalações</a></li>
-                    <li><a href="#" onclick="js.abreParcial();">parcial do consumo</a></li>
-                    <li><a href="#" onclick="js.abreCheckout();">solicitar checkout</a></li>
-                    <li><a href="#" onclick="js.abreSolicitacoes();">minhas solicitações</a></li>
+                    <li><a href="#" onclick="js.abreCardapio();" class="aicon"><div class="icard"></div>cardápio</a></li>
+                    <li><a href="#" onclick="js.abreServicos();" class="aicon"><div class="iserv"></div>serviço de quarto</a></li>
+                    <li><a href="#" onclick="js.abreAtividades();" class="aicon"><div class="iativ"></div>atividades</a></li>
+                    <li><a href="#" onclick="js.abreInstalacoes();" class="aicon"><div class="iinst"></div>instalações</a></li>
+                    <li><a href="#" onclick="js.abreParcial();" class="aicon"><div class="iparc"></div>parcial do consumo</a></li>
+                    <li><a href="#" onclick="js.abreCheckout();" class="aicon"><div class="isol"></div>solicitar checkout</a></li>
                 </ul>
             </div>
         </div>
         <div id="footer">
-            refresh
+            <div class="refresh-icon"> </div>
         </div>
     </body>
     <script type="text/javascript">
