--- a/atividades.html
+++ b/atividades.html
@@ -6,7 +6,7 @@
        <script src="js/jquery-2.1.1.js"></script>
        <script src="menuplugin/jquery.sidr.min.js"></script>
        <script src="js/controle.js"></script>
-       <script src="js/atividade.js"></script>
+       <script src="js/jsAtividade.js"></script>
        <link rel="stylesheet" type="text/css" href="css/style.css" />
        <link rel="stylesheet" href="menuplugin/stylesheets/jquery.sidr.dark.css">
        <title>Hotel</title>
@@ -40,7 +40,7 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $('#simple-menu').sidr();
-            atividade.buscaAtividades();
+            jsAtividade.buscaAtividades();
         });
     </script>
 </html>
