--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
        <script src="js/jquery-2.1.1.js"></script>
        <script src="menuplugin/jquery.sidr.min.js"></script>
        <script src="js/controle.js"></script>
+       <script src="js/jsAtividade.js"></script>
        <link rel="stylesheet" type="text/css" href="css/style.css" />
        <link rel="stylesheet" href="menuplugin/stylesheets/jquery.sidr.dark.css">
        <title>Hotel</title>
@@ -14,19 +15,19 @@
         <div id="header">
             <div id="simple-menu" href="#sidr" onclick="js.ajustaHeader();">
                <div class="menu-icon"> </div>
-            <div class="thename"> NOME DO HOTEL </div>
+            <div class="thename"> Atividades </div>
                 <div class="notification"><a href="#" onclick="js.abreSolicitacoes();"> </a> </div>
             </div>
         </div>
         <div id="body">
             <div id="sidr">
                 <ul>
-                    <li><a href="#" onclick="js.abreCardapio();" class="aicon"><div class="icard"></div>cardápio</a></li>
-                    <li><a href="#" onclick="js.abreServicos();" class="aicon"><div class="iserv"></div>serviço de quarto</a></li>
-                    <li><a href="#" onclick="js.abreAtividades();" class="aicon"><div class="iativ"></div>atividades</a></li>
-                    <li><a href="#" onclick="js.abreInstalacoes();" class="aicon"><div class="iinst"></div>instalações</a></li>
-                    <li><a href="#" onclick="js.abreParcial();" class="aicon"><div class="iparc"></div>parcial do consumo</a></li>
-                    <li><a href="#" onclick="js.abreCheckout();" class="aicon"><div class="isol"></div>solicitar checkout</a></li>
+                    <li><a href="#" onclick="js.abreCardapio();" class="aicon"><div class="icard"></div>&nbsp;CARDÁPIO</a></li>
+                    <li><a href="#" onclick="js.abreServicos();" class="aicon"><div class="iserv"></div>&nbsp;SERVIÇO DE QUARTO</a></li>
+                    <li><a href="#" onclick="js.abreAtividades();" class="aicon"><div class="iativ"></div>&nbsp;ATIVIDADES</a></li>
+                    <li><a href="#" onclick="js.abreInstalacoes();" class="aicon"><div class="iinst"></div>&nbsp;INSTALAÇÕES</a></li>
+                    <li><a href="#" onclick="js.abreParcial();" class="aicon"><div class="iparc"></div>&nbsp;PARCIAL DO CONSUMO</a></li>
+                    <li><a href="#" onclick="js.abreCheckout();" class="aicon"><div class="isol"></div>&nbsp;SOLICITAR CHECKOUT</a></li>
                 </ul>
             </div>
         </div>
