--- a/atividades.html
+++ b/atividades.html
@@ -22,12 +22,12 @@
         <div id="body">
             <div id="sidr">
                 <ul>
-                    <li><a href="#" onclick="js.abreCardapio();" class="aicon"><div class="icard"></div>cardápio</a></li>
-                    <li><a href="#" onclick="js.abreServicos();" class="aicon"><div class="iserv"></div>serviço de quarto</a></li>
-                    <li><a href="#" onclick="js.abreAtividades();" class="aicon"><div class="iativ"></div>atividades</a></li>
-                    <li><a href="#" onclick="js.abreInstalacoes();" class="aicon"><div class="iinst"></div>instalações</a></li>
-                    <li><a href="#" onclick="js.abreParcial();" class="aicon"><div class="iparc"></div>parcial do consumo</a></li>
-                    <li><a href="#" onclick="js.abreCheckout();" class="aicon"><div class="isol"></div>solicitar checkout</a></li>
+                    <li><a href="#" onclick="js.abreCardapio();" class="aicon"><div class="icard"></div>&nbsp;CARDÁPIO</a></li>
+                    <li><a href="#" onclick="js.abreServicos();" class="aicon"><div class="iserv"></div>&nbsp;SERVIÇO DE QUARTO</a></li>
+                    <li><a href="#" onclick="js.abreAtividades();" class="aicon"><div class="iativ"></div>&nbsp;ATIVIDADES</a></li>
+                    <li><a href="#" onclick="js.abreInstalacoes();" class="aicon"><div class="iinst"></div>&nbsp;INSTALAÇÕES</a></li>
+                    <li><a href="#" onclick="js.abreParcial();" class="aicon"><div class="iparc"></div>&nbsp;PARCIAL DO CONSUMO</a></li>
+                    <li><a href="#" onclick="js.abreCheckout();" class="aicon"><div class="isol"></div>&nbsp;SOLICITAR CHECKOUT</a></li>
                 </ul>
             </div>
             <div id="conteudo" class="conteudo">
