--- a/solicitacoes.html
+++ b/solicitacoes.html
@@ -13,11 +13,10 @@
     </head>
     <body>
         <div id="header">
-            <div id="simple-menu" href="#sidr" onclick="js.ajustaHeader();">
-               <div class="menu-icon"> </div>
-            <div class="thename"> Atividades </div>
-                <div class="notification"><a href="#" onclick="js.abreSolicitacoes();"> </a> </div>
-            </div>
+            <div id="simple-menu" href="#sidr">
+                <div class="menu-icon" onclick="js.ajustaHeader();"> </div> </div>
+            <div class="thename">&nbsp; SOLICITAÇÕES </div>
+                <div class="notification" onclick="js.abreSolicitacoes();"> </div>
         </div>
         <div id="body">
             <div id="sidr">
