--- a/atividades.html
+++ b/atividades.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
     <head>
        <meta charset="UTF-8"/>
@@ -13,11 +12,10 @@
     </head>
     <body>
         <div id="header">
-            <div id="simple-menu" href="#sidr" onclick="js.ajustaHeader();">
-               <div class="menu-icon"> </div>
-            <div class="thename"> Atividades </div>
-                <div class="notification"><a href="#" onclick="js.abreSolicitacoes();"> </a> </div>
-            </div>
+            <div id="simple-menu" href="#sidr">
+                <div class="menu-icon" onclick="js.ajustaHeader();"> </div> </div>
+           <div class="iativ"> </div> <div class="thename">&nbsp; ATIVIDADES </div>
+                <div class="notification" onclick="js.abreSolicitacoes();"> </div>
         </div>
         <div id="body">
             <div id="sidr">
