coisa pra caramba

--- a/cadastroProduto.html
+++ b/cadastroProduto.html
@@ -1,7 +1,7 @@
-<div id="tela" name="cadastroAtividade"></div>
+<div id="tela" name="cadastroProduto"></div>
 <div>
     código
-    <input id="idatividade" disabled="true" type="text" />
+    <input id="idproduto" disabled="true" type="text" />
 </div>
 <div>
     nome
@@ -14,4 +14,9 @@
 <div>
     descrição
     <input id="descricao" type="text" />
+</div>
+<div>
+    grupo
+    <select id="grupo_idgrupo">
+    </select>
 </div>
