--- a/cadastroServico.html
+++ b/cadastroServico.html
@@ -1,7 +1,7 @@
-<div id="tela" name="cadastroAtividade"></div>
+<div id="tela" name="cadastroServico"></div>
 <div>
     código
-    <input id="idatividade" disabled="true" type="text" />
+    <input id="idservico" disabled="true" type="text" />
 </div>
 <div>
     nome
@@ -10,6 +10,10 @@
 <div>
     preço
     <input id="preco" type="text" />
+</div>
+<div>
+    utiliza quantidade
+    <input id="utilizaquantidade" type="text" />
 </div>
 <div>
     descrição
