--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
     <head>
        <meta charset="UTF-8"/>
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <script src="js/jquery-2.1.1.js"></script>
+       <script src="js/jquery/jquery-2.1.1.js"></script>
        <script src="menuplugin/jquery.sidr.min.js"></script>
+
+       <!-- CLASSE DE CONTROLE -->
        <script src="js/controle.js"></script>
+       <!-- FIM -->
+       
+       <!-- CLASSES DO SISTEMA -->
+       <script src="js/jsAtividade.js"></script>
+       <script src="js/jsInstalacao.js"></script>
+       <script src="js/jsServico.js"></script>
+       <script src="js/jsHospede.js"></script>
+       <script src="js/jsOperador.js"></script>
+       <script src="js/jsProfissional.js"></script>
+       <script src="js/jsGrupo.js"></script>
+       <script src="js/jsProduto.js"></script>
+       <!-- FIM -->
+
        <link rel="stylesheet" type="text/css" href="css/style.css" />
        <link rel="stylesheet" href="menuplugin/stylesheets/jquery.sidr.dark.css">
        <title>Hotel</title>
@@ -13,30 +28,32 @@
     <body>
         <div id="header">
             <div id="simple-menu" href="#sidr" onclick="js.ajustaHeader();">
-               <div class="menu-icon"> </div>
-            <div class="thename"> NOME DO HOTEL </div>
-                <div class="notification"><a href="#" onclick="js.abreSolicitacoes();"> </a> </div>
+                <div class="menu-icon">
+                </div>
+                <div id="titulo" class="thename">
+                    NOME DO HOTEL
+                </div>
+                <div class="notification">
+                    <a href="#" onclick="js.abreSolicitacoes();"></a>
+                </div>
             </div>
         </div>
         <div id="body">
             <div id="sidr">
-                <ul>
-                    <li><a href="#" onclick="js.abreCardapio();" class="aicon"><div class="icard"></div>cardápio</a></li>
-                    <li><a href="#" onclick="js.abreServicos();" class="aicon"><div class="iserv"></div>serviço de quarto</a></li>
-                    <li><a href="#" onclick="js.abreAtividades();" class="aicon"><div class="iativ"></div>atividades</a></li>
-                    <li><a href="#" onclick="js.abreInstalacoes();" class="aicon"><div class="iinst"></div>instalações</a></li>
-                    <li><a href="#" onclick="js.abreParcial();" class="aicon"><div class="iparc"></div>parcial do consumo</a></li>
-                    <li><a href="#" onclick="js.abreCheckout();" class="aicon"><div class="isol"></div>solicitar checkout</a></li>
+                <ul id="itensMenu">
                 </ul>
+            </div>
+            <div id="conteudo">
             </div>
         </div>
         <div id="footer">
-            <div class="refresh-icon"> </div>
         </div>
     </body>
     <script type="text/javascript">
         $(document).ready(function() {
             $('#simple-menu').sidr();
+            js.trocaRodape('lista');
+            js.preencheMenu();
         });
     </script>
 </html>
