--- a/footerServico.html
+++ b/footerServico.html
@@ -1,2 +1,2 @@
 <div onclick="js.abreTelaAnterior();">voltar</div>
-<div onclick="js.salvaRegistro();">salvar</div>
+<div onclick="">solicitar</div>
