--- a/detalheServico.html
+++ b/detalheServico.html
@@ -1,21 +1,9 @@
 <div id="tela" name="detalheServico"></div>
-<div>
-    código
-    <input id="idservico" disabled="true" type="text" />
+<div id="idservico">
 </div>
-<div>
-    nome
-    <input id="nome" type="text" />
+<div id="nome">
 </div>
-<div>
-    preço
-    <input id="preco" type="text" />
+<div id="preco">
 </div>
-<div>
-    utiliza quantidade
-    <input id="utilizaquantidade" type="text" />
-</div>
-<div>
-    descrição
-    <input id="descricao" type="text" />
+<div id="descricao">
 </div>
