--- a/cadastroAtividade.html
+++ b/cadastroAtividade.html
@@ -1,17 +1,17 @@
 <div id="tela" name="cadastroAtividade"></div>
-<div>
+<div class="thecampo" > <div class="ccadi">
     código
     <input id="idatividade" disabled="true" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     nome
     <input id="nome" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     preço
     <input id="preco" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     descrição
     <input id="descricao" type="text" />
-</div>
+    </div></div>
