--- a/cadastroHospede.html
+++ b/cadastroHospede.html
@@ -1,13 +1,13 @@
 <div id="tela" name="cadastroHospede"></div>
-<div>
+<div class="thecampo" > <div class="ccadi">
     código
     <input id="idhospede" disabled="true" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     nome
     <input id="nome" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     quarto
     <input id="quarto" type="text" />
-</div>
+    </div></div>
