--- a/cadastroInstalacao.html
+++ b/cadastroInstalacao.html
@@ -1,17 +1,17 @@
 <div id="tela" name="cadastroInstalacao"></div>
-<div>
+<div class="thecampo" > <div class="ccadi">
     código
     <input id="idinstalacao" disabled="true" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     nome
     <input id="nome" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     descrição
     <input id="descricao" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     horário de funcionamento
     <input id="horariofuncionamento" type="text" />
-</div>
+    </div></div>
