--- a/cadastroOperador.html
+++ b/cadastroOperador.html
@@ -1,13 +1,19 @@
 <div id="tela" name="cadastroOperador"></div>
-<div>
-    código
-    <input id="idoperador" disabled="true" type="text" />
+<div class="thecampo" >
+    <div class="ccadi">
+        código
+        <input id="idoperador" disabled="true" type="text" />
+    </div>
 </div>
-<div>
-    nome
-    <input id="nome" type="text" />
+<div class="thecampo" >
+    <div class="ccadi">
+        nome
+        <input id="nome" type="text" />
+    </div>
 </div>
-<div>
-    tipo do operador
-    <input id="tipooperador" type="text" />
+<div class="thecampo" >
+    <div class="ccadi">
+        tipo do operador
+        <input id="tipooperador" type="text" />
+    </div>
 </div>
