--- a/cadastroProfissional.html
+++ b/cadastroProfissional.html
@@ -1,9 +1,11 @@
 <div id="tela" name="cadastroProfissional"></div>
-<div>
-    código
+
+   <div class="thecampo" > <div class="ccadi">
+    CÓDIGO
     <input id="idprofissional" disabled="true" type="text" />
-</div>
-<div>
-    nome
+       </div> </div>
+
+<div class="thecampo" ><div class="ccadi">
+    NOME
     <input id="nome" type="text" />
-</div>
+</div></div>
