--- a/footerCadastro.html
+++ b/footerCadastro.html
@@ -1,2 +1,2 @@
-<div onclick="js.abreTelaAnterior();">voltar</div>
-<div onclick="js.salvaRegistro();">salvar</div>
+<div class="voltar" onclick="js.abreTelaAnterior();">VOLTAR</div>
+<div class="salvar" onclick="js.salvaRegistro();">SALVAR</div>
