--- a/cadastroGrupo.html
+++ b/cadastroGrupo.html
@@ -1,9 +1,9 @@
 <div id="tela" name="cadastroGrupo"></div>
-<div>
+<div class="thecampo" > <div class="ccadi">
     código
     <input id="idgrupo" disabled="true" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     nome
     <input id="nome" type="text" />
-</div>
+    </div></div>
