--- a/cadastroProduto.html
+++ b/cadastroProduto.html
@@ -1,22 +1,22 @@
 <div id="tela" name="cadastroProduto"></div>
-<div>
+<div class="thecampo" > <div class="ccadi">
     código
     <input id="idproduto" disabled="true" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     nome
     <input id="nome" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     preço
     <input id="preco" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     descrição
     <input id="descricao" type="text" />
-</div>
-<div>
+    </div></div>
+<div class="thecampo" > <div class="ccadi">
     grupo
     <select id="grupo_idgrupo">
     </select>
-</div>
+    </div></div>
