--- a/footerListaGerente.html
+++ b/footerListaGerente.html
@@ -1,1 +1,1 @@
-<div onclick="js.abreNovoRegistro();">novo</div><div class="refresh-icon"></div>
+<div class="newitem" onclick="js.abreNovoRegistro();">novo</div><div class="refresh-icon"></div>
