alteraçoes do merge, correcao de bugs

--- a/html/gerente/cadastroAtividade.html
+++ b/html/gerente/cadastroAtividade.html
@@ -1,17 +1,26 @@
-<div id="tela" name="cadastroAtividade"></div>
-<div>
-    código
-    <input id="idatividade" disabled="true" type="text" />
+<div id="tela" name="cadastroAtividade">
 </div>
-<div>
-    nome
-    <input id="nome" type="text" />
+<div class="thecampo" >
+	<div class="ccadi">
+	    código
+	    <input id="idatividade" disabled="true" type="text" />
+    </div>
 </div>
-<div>
-    preço
-    <input id="preco" type="text" />
+<div class="thecampo" > 
+	<div class="ccadi">
+    	nome
+    	<input id="nome" type="text" />
+    </div>
 </div>
-<div>
-    descrição
-    <input id="descricao" type="text" />
+<div class="thecampo" > 
+	<div class="ccadi">
+    	preço
+    	<input id="preco" type="text" />
+    </div>
+</div>
+<div class="thecampo" > 
+	<div class="ccadi">
+    	descrição
+    	<input id="descricao" type="text" />
+    </div>
 </div>
