--- a/html/gerente/cadastroProfissional.html
+++ b/html/gerente/cadastroProfissional.html
@@ -1,9 +1,14 @@
-<div id="tela" name="cadastroProfissional"></div>
-<div>
-    código
-    <input id="idprofissional" disabled="true" type="text" />
+<div id="tela" name="cadastroProfissional">
 </div>
-<div>
-    nome
-    <input id="nome" type="text" />
+<div class="thecampo" >
+	<div class="ccadi">
+    	CÓDIGO
+    	<input id="idprofissional" disabled="true" type="text" />
+	</div>
+</div>
+<div class="thecampo" >
+	<div class="ccadi">
+    	NOME
+    	<input id="nome" type="text" />
+	</div>
 </div>
