--- a/html/gerente/cadastroServico.html
+++ b/html/gerente/cadastroServico.html
@@ -1,21 +1,32 @@
-<div id="tela" name="cadastroServico"></div>
-<div>
-    código
-    <input id="idservico" disabled="true" type="text" />
+<div id="tela" name="cadastroServico">
 </div>
-<div>
-    nome
-    <input id="nome" type="text" />
+<div class="thecampo" >
+	<div class="ccadi">
+    	código
+    	<input id="idservico" disabled="true" type="text" />
+    </div>
 </div>
-<div>
-    preço
-    <input id="preco" type="text" />
+<div class="thecampo" >
+	<div class="ccadi">
+    	nome
+    	<input id="nome" type="text" />
+    </div>
 </div>
-<div>
-    utiliza quantidade
-    <input id="utilizaquantidade" type="text" />
+<div class="thecampo" >
+	<div class="ccadi">
+    	preço
+    	<input id="preco" type="text" />
+    </div>
 </div>
-<div>
-    descrição
-    <input id="descricao" type="text" />
+<div class="thecampo" >
+	<div class="ccadi">
+    	utiliza quantidade
+    	<input id="utilizaquantidade" type="text" />
+    </div>
+</div>
+<div class="thecampo" >
+	<div class="ccadi">
+    	descrição
+    	<input id="descricao" type="text" />
+    </div>
 </div>
