--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             	<input type="text" id="idhospede">
             	<br>
             	senha
-            	<input type="text" id="senha">            	
+            	<input type="password" id="senha">            	
             	<br>
             	<button type="button" onclick="jsHospede.loginHospede();">entrar</button>
             </div>
@@ -60,6 +60,7 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $('#simple-menu').sidr();
+            js.modo = 'user';
         });
     </script>
 </html>
