--- a/html/gerente/cadastroGrupo.html
+++ b/html/gerente/cadastroGrupo.html
@@ -1,9 +1,14 @@
-<div id="tela" name="cadastroGrupo"></div>
-<div>
-    código
-    <input id="idgrupo" disabled="true" type="text" />
+<div id="tela" name="cadastroGrupo">
 </div>
-<div>
-    nome
-    <input id="nome" type="text" />
+<div class="thecampo" > 
+	<div class="ccadi">
+    	código
+    	<input id="idgrupo" disabled="true" type="text" />
+    </div>
+</div>
+<div class="thecampo" > 
+	<div class="ccadi">
+    	nome
+    	<input id="nome" type="text" />
+    </div>
 </div>
