--- a/html/gerente/cadastroHospede.html
+++ b/html/gerente/cadastroHospede.html
@@ -1,13 +1,20 @@
-<div id="tela" name="cadastroHospede"></div>
-<div>
-    código
-    <input id="idhospede" disabled="true" type="text" />
+<div id="tela" name="cadastroHospede">
 </div>
-<div>
-    nome
-    <input id="nome" type="text" />
+<div class="thecampo" >
+	<div class="ccadi">
+    	código
+    	<input id="idhospede" disabled="true" type="text" />
+    </div>
 </div>
-<div>
-    quarto
-    <input id="quarto" type="text" />
+<div class="thecampo" > 
+	<div class="ccadi">
+    	nome
+    	<input id="nome" type="text" />
+    </div>
+</div>
+<div class="thecampo" >
+	<div class="ccadi">
+    	quarto
+    	<input id="quarto" type="text" />
+    </div>
 </div>
