--- a/html/gerente/cadastroInstalacao.html
+++ b/html/gerente/cadastroInstalacao.html
@@ -1,17 +1,26 @@
-<div id="tela" name="cadastroInstalacao"></div>
-<div>
-    código
-    <input id="idinstalacao" disabled="true" type="text" />
+<div id="tela" name="cadastroInstalacao">
 </div>
-<div>
-    nome
-    <input id="nome" type="text" />
+<div class="thecampo" >
+	<div class="ccadi">
+    	código
+    	<input id="idinstalacao" disabled="true" type="text" />
+    </div>
 </div>
-<div>
-    descrição
-    <input id="descricao" type="text" />
+<div class="thecampo" >
+	<div class="ccadi">
+    	nome
+    	<input id="nome" type="text" />
+    </div>
 </div>
-<div>
-    horário de funcionamento
-    <input id="horariofuncionamento" type="text" />
+<div class="thecampo" > 
+	<div class="ccadi">
+    	descrição
+    	<input id="descricao" type="text" />
+    </div>
+</div>
+<div class="thecampo" >
+	<div class="ccadi">
+    	horário de funcionamento
+    	<input id="horariofuncionamento" type="text" />
+    </div>
 </div>
