--- a/html/gerente/cadastroProduto.html
+++ b/html/gerente/cadastroProduto.html
@@ -1,22 +1,33 @@
-<div id="tela" name="cadastroProduto"></div>
-<div>
-    código
-    <input id="idproduto" disabled="true" type="text" />
+<div id="tela" name="cadastroProduto">
 </div>
-<div>
-    nome
-    <input id="nome" type="text" />
+<div class="thecampo" >
+	<div class="ccadi">
+    	código
+    	<input id="idproduto" disabled="true" type="text" />
+    </div>
 </div>
-<div>
-    preço
-    <input id="preco" type="text" />
+<div class="thecampo" >
+	<div class="ccadi">
+    	nome
+    	<input id="nome" type="text" />
+    </div>
 </div>
-<div>
-    descrição
-    <input id="descricao" type="text" />
+<div class="thecampo" >	
+    <div class="ccadi">
+    	preço
+    	<input id="preco" type="text" />
+    </div>
 </div>
-<div>
-    grupo
-    <select id="grupo_idgrupo">
-    </select>
+<div class="thecampo" >
+	<div class="ccadi">
+    	descrição
+    	<input id="descricao" type="text" />
+    </div>
+</div>
+<div class="thecampo" > 	
+	<div class="ccadi">
+    	grupo
+    	<select id="grupo_idgrupo">
+    	</select>
+    </div>
 </div>
