--- a/html/menu/menuGerente.html
+++ b/html/menu/menuGerente.html
@@ -1,6 +1,6 @@
-<li><a href="#" onclick="jsHospede.abreHospedes(); $.sidr('toggle');" class="aicon"><div class="icard"></div>hóspedes</a></li>
-<li><a href="#" onclick="jsOperador.abreOperadores(); $.sidr('toggle');" class="aicon"><div class="icard"></div>operadores</a></li>
-<li><a href="#" onclick="jsProfissional.abreProfissionais(); $.sidr('toggle');" class="aicon"><div class="icard"></div>profissionais</a></li>
+<li><a href="#" onclick="jsHospede.abreHospedes(); $.sidr('toggle');" class="aicon"><div class="ihosp"></div>hóspedes</a></li>
+<li><a href="#" onclick="jsOperador.abreOperadores(); $.sidr('toggle');" class="aicon"><div class="ioper"></div>operadores</a></li>
+<li><a href="#" onclick="jsProfissional.abreProfissionais(); $.sidr('toggle');" class="aicon"><div class="iprof"></div>profissionais</a></li>
 <li><a href="#" onclick="jsGrupo.abreGrupos(); $.sidr('toggle');" class="aicon"><div class="icard"></div>grupos</a></li>
 <li><a href="#" onclick="jsProduto.abreProdutos(); $.sidr('toggle');" class="aicon"><div class="icard"></div>produtos</a></li>
 <li><a href="#" onclick="jsServico.abreServicos(); $.sidr('toggle');" class="aicon"><div class="iserv"></div>serviços de quarto</a></li>
