--- a/indexGerente.html
+++ b/indexGerente.html
@@ -49,7 +49,7 @@
             	<input type="text" id="idoperador">
             	<br>
             	senha
-            	<input type="text" id="senha">            	
+            	<input type="password" id="senha">            	
             	<br>
             	<button type="button" onclick="jsOperador.loginOperador();">entrar</button>
             </div>
