--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
                 </ul>
             </div>
             <div id="conteudo">
-            	hóspede
+            <div class="loginform">
+            	<div class="ccadi" > HÓSPEDE </div>
             	<input type="text" id="idhospede">
             	<br>
-            	senha
+            	<div class="ccadi" > SENHA </div>
             	<input type="password" id="senha">            	
             	<br>
-            	<button type="button" onclick="jsHospede.loginHospede();">entrar</button>
+            	<button type="button" onclick="jsHospede.loginHospede();">ENTRAR</button>
+                </div>
             </div>
         </div>
         <div id="footer">
