--- a/indexGerente.html
+++ b/indexGerente.html
@@ -45,13 +45,15 @@
                 </ul>
             </div>
             <div id="conteudo">
-            	operador
-            	<input type="text" id="idoperador">
+            	<div class="loginform">
+            	<div class="ccadi" > OPERADOR </div>
+            	<input type="text" id="idhospede">
             	<br>
-            	senha
+            	<div class="ccadi" > SENHA </div>
             	<input type="password" id="senha">            	
             	<br>
-            	<button type="button" onclick="jsOperador.loginOperador();">entrar</button>
+            	<button type="button" onclick="jsHospede.loginOperador();">ENTRAR</button>
+                </div>
             </div>
         </div>
         <div id="footer">
