--- a/html/footer/footerServico.html
+++ b/html/footer/footerServico.html
@@ -1,2 +1,2 @@
-<div onclick="js.abreTelaAnterior();">voltar</div>
-<div onclick="jsServico.solicitaServico();">solicitar</div>
+<div class="voltar" onclick="js.abreTelaAnterior();">VOLTAR</div>
+<div class="salvar" onclick="jsServico.solicitaServico();">SOLICITAR</div>
