corrigindo bugs e implementando outras telas

--- a/html/gerente/cadastroOperador.html
+++ b/html/gerente/cadastroOperador.html
@@ -18,3 +18,9 @@
         <input id="tipooperador" type="text" />
     </div>
 </div>
+<div class="thecampo" >
+	<div class="ccadi">
+    	senha
+    	<input id="senha" type="text" />
+    </div>
+</div>
