--- a/html/menu/menu.html
+++ b/html/menu/menu.html
@@ -1,6 +1,6 @@
-<li><a href="#" onclick="$.sidr('toggle');" class="aicon"><div class="icard"></div>&nbsp;cardápio</a></li>
-<li><a href="#" onclick="jsServico.abreServicos(); $.sidr('toggle');" class="aicon"><div class="iserv"></div>&nbsp;serviço de quarto</a></li>
-<li><a href="#" onclick="jsAtividade.abreAtividades(); $.sidr('toggle');" class="aicon"><div class="iativ"></div>&nbsp;atividades</a></li>
+<li><a href="#" onclick="jsCardapio.abreCardapio();      $.sidr('toggle');" class="aicon"><div class="icard"></div>&nbsp;cardápio</a></li>
+<li><a href="#" onclick="jsServico.abreServicos();       $.sidr('toggle');" class="aicon"><div class="iserv"></div>&nbsp;serviço de quarto</a></li>
+<li><a href="#" onclick="jsAtividade.abreAtividades();   $.sidr('toggle');" class="aicon"><div class="iativ"></div>&nbsp;atividades</a></li>
 <li><a href="#" onclick="jsInstalacao.abreInstalacoes(); $.sidr('toggle');" class="aicon"><div class="iinst"></div>&nbsp;instalações</a></li>
-<li><a href="#" onclick="$.sidr('toggle');" class="aicon"><div class="iparc"></div>&nbsp;parcial do consumo</a></li>
-<li><a href="#" onclick="$.sidr('toggle');" class="aicon"><div class="isol"></div>&nbsp;solicitar checkout</a></li>
+<li><a href="#" onclick="jsConta.abreParcial();          $.sidr('toggle');" class="aicon"><div class="iparc"></div>&nbsp;parcial do consumo</a></li>
+<li><a href="#" onclick="jsConta.abreCheckout();         $.sidr('toggle');" class="aicon"><div class="isol"></div>&nbsp;solicitar checkout</a></li>
