--- a/html/user/detalheServico.html
+++ b/html/user/detalheServico.html
@@ -1,11 +1,12 @@
-<div id="tela" name="detalheServico"></div>
+<div id="tela" name="detalheServico">
+</div>
 <div id="idservico" class="hidden">
 </div>
-<div id="nome" class="titdesc"> DESCRIÇÃO </div>
-                <div id="descricao" class="descativ"> 
-                
-                </div>
-
+<div id="nome" class="titdesc">
+	DESCRIÇÃO
+</div>
+<div id="descricao" class="descativ">         
+</div>
 <div id="preco">
 </div>
 quantidade
