--- a/html/footer/footerListaGerente.html
+++ b/html/footer/footerListaGerente.html
@@ -1,1 +1,1 @@
-<div class="newitem" onclick="js.abreNovoRegistro();">novo</div><div class="refresh-icon"></div>
+<div class="newitem" onclick="js.abreNovoRegistro();">novo</div>
