--- a/html/gerente/cadastroHospede.html
+++ b/html/gerente/cadastroHospede.html
@@ -18,3 +18,9 @@
     	<input id="quarto" type="text" />
     </div>
 </div>
+<div class="thecampo" >
+	<div class="ccadi">
+    	senha
+    	<input id="senha" type="text" />
+    </div>
+</div>
