--- a/indexOperador.html
+++ b/indexOperador.html
@@ -19,6 +19,7 @@
        <script src="js/jsProfissional.js"></script>
        <script src="js/jsGrupo.js"></script>
        <script src="js/jsProduto.js"></script>
+       <script src="js/jsCardapio.js"></script>
        <!-- FIM -->
 
        <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -36,8 +37,6 @@
             <div id="titulo" class="thename">
             	MYROOM
             </div>
-            <div class="notification" onclick="js.abreSolicitacoes();">
-            </div>
         </div>
         <div id="body">
             <div id="sidr">
@@ -46,13 +45,19 @@
             </div>
             <div id="conteudo">
             	<div class="loginform">
-            	<div class="ccadi" > OPERADOR </div>
-            	<input type="text" id="idhospede">
-            	<br>
-            	<div class="ccadi" > SENHA </div>
-            	<input type="password" id="senha">            	
-            	<br>
-            	<button type="button" onclick="jsHospede.loginOperador();">ENTRAR</button>
+	            	<div class="ccadi" > 
+	            		OPERADOR 
+	            	</div>
+	            	<input type="text" id="idoperador">
+	            	<br>
+	            	<div class="ccadi" > 
+	            		SENHA 
+            		</div>
+	            	<input type="password" id="senha">            	
+	            	<br>
+	            	<button type="button" onclick="jsOperador.loginOperador();">
+	            		ENTRAR
+            		</button>
                 </div>
             </div>
         </div>
