--- a/html/user/cardapio.html
+++ b/html/user/cardapio.html
@@ -30,6 +30,11 @@
                 </ul>
             </div>
         </div>
+        <div id="conteudo">
+        
+
+        </div> <!-- FIM DA CONTEUDO -->
+        
         <div id="footer">
             <div class="refresh-icon"> </div>
         </div>
