--- a/html/user/detalheCardapio.html
+++ b/html/user/detalheCardapio.html
@@ -1,11 +1,7 @@
-<div id="tela" name="detalheServico">
-</div>
-<div id="idservico" class="hidden">
-</div>
-<div id="nome" class="titdesc">
+<div id="nome" class="titcard">
 	DESCRIÇÃO
 </div>
-<div id="descricao" class="descativ">         
+<div id="descricao" class="desccard">         
 </div>
 
 <div class="infocol"> <div class="infocoll">
