--- a/html/user/detalheProduto.html
+++ b/html/user/detalheProduto.html
@@ -3,9 +3,14 @@
 <div id="idproduto" class="hidden">
 </div>
 <img id="imgproduto" src="">
-<div id="descricao" class="descativ">         
+<div id="nome" class="titcard"> </div>
+<div id="descricao" class="desccard">         
 </div>
-quantidade
-<input type="text" id="quantidade" >    
-<div id="preco">
-</div>
+<div class="infocol"> <div class="infocoll">
+    <div class="qntbox"> <div class="qntinfo"> QUANTIDADE: </div> <div type="text" class="qntdd" id="quantidade"> </div>  </div> </div>
+<div class="infocolr">
+<div class="pricebox"> <div class="priceinfo"> PREÇO: </div> <div id="preco" class="theprice"> </div> </div>
+    
+</div> <!-- FIM DA COLUNA DIREITA -->
+
+</div> <!-- FIM DA INFOCOL --> 
