formatacao preco e layout

--- a/html/user/detalheProduto.html
+++ b/html/user/detalheProduto.html
@@ -2,6 +2,8 @@
 </div>
 <div id="idproduto" class="hidden">
 </div>
+<div id="nome" class="hidden">
+</div>
 <img id="imgproduto" src="">
 <div id="descricao" class="descativ">         
 </div>
