telas cardapio e transferencia de pedido

--- a/html/menu/menu.html
+++ b/html/menu/menu.html
@@ -1,4 +1,4 @@
-<li><a href="#" onclick="jsCardapio.abreCardapio();      $.sidr('toggle');" class="aicon"><div class="icard"></div>&nbsp;cardápio</a></li>
+<li><a href="#" onclick="jsCardapio.abreCardapio();      $.sidr('toggle'); jsCardapio.carrinho = [];" class="aicon"><div class="icard"></div>&nbsp;cardápio</a></li>
 <li><a href="#" onclick="jsServico.abreServicos();       $.sidr('toggle');" class="aicon"><div class="iserv"></div>&nbsp;serviço de quarto</a></li>
 <li><a href="#" onclick="jsAtividade.abreAtividades();   $.sidr('toggle');" class="aicon"><div class="iativ"></div>&nbsp;atividades</a></li>
 <li><a href="#" onclick="jsInstalacao.abreInstalacoes(); $.sidr('toggle');" class="aicon"><div class="iinst"></div>&nbsp;instalações</a></li>
