--- a/html/user/detalheProduto.html
+++ b/html/user/detalheProduto.html
@@ -4,7 +4,7 @@
 </div>
 <div id="nome" class="hidden">
 </div>
-<img id="imgproduto" src="">
+<img id="imgproduto" class="img-produto" src="">
 <div id="nome" class="titcard"> </div>
 <div id="descricao" class="desccard">         
 </div>
