retirando titulo que esta sobrando

--- a/html/user/detalheInstalacao.html
+++ b/html/user/detalheInstalacao.html
@@ -2,7 +2,7 @@
 </div>
 <div id="idinstalacao" class="hidden">
 </div>
-<div id="nome" class="titdesc">
+<div id="nome" class="titdesc hidden">
 	DESCRIÇÃO
 </div>
 <div id="descricao" class="descativ">         
