--- a/html/user/detalheProduto.html
+++ b/html/user/detalheProduto.html
@@ -8,8 +8,16 @@
 <div id="nome" class="titcard"> </div>
 <div id="descricao" class="desccard">         
 </div>
-<div class="infocol"> <div class="infocoll">
-    <div class="qntbox"> <div class="qntinfo"> QUANTIDADE: </div> <div type="text" class="qntdd" id="quantidade"> </div>  </div> </div>
+<div class="infocol">
+	<div class="infocoll">
+    	<div class="qntbox">
+    		<div class="qntinfo">
+    			QUANTIDADE:
+    		</div>
+    		<input type="text" class="qntdd" id="quantidade">
+		</div>
+	</div>
+</div>
 <div class="infocolr">
 <div class="pricebox"> <div class="priceinfo"> PREÇO: </div> <div id="preco" class="theprice"> </div> </div>
     
