--- a/html/user/detalheServico.html
+++ b/html/user/detalheServico.html
@@ -10,12 +10,8 @@
 
 <div class="infocol"> <div class="infocoll">
     <div class="qntbox"> <div class="qntinfo"> QUANTIDADE: </div> 
-    <select class="qntdd" id="quantidade"> 
-    <option> 01 </option>
-    <option> 02 </option>
-    <option> 03 </option>
-    <option> 04 </option>
-    </select></div>
+    <input class="qntdd" id="quantidade"> 
+    </input></div>
 </div> <!-- FIM DA COLUNA ESQUERDA -->
  
 <div class="infocolr">
