--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 	            	<div class="ccadi" >
 	            		HÓSPEDE
 	            	</div>
-	            	<input type="text" id="idhospede">
+	            	<input type="text" id="idhospede" class="inputd">
 	            	<br>
 	            	<div class="ccadi" > 
 	            		SENHA
 	        		</div>
-	            	<input type="password" id="senha">            	
+	            	<input type="password" id="senha" class="inputd">            	
 	            	<br>
 	            	<button type="button" onclick="jsHospede.loginHospede();">
 	            		ENTRAR
