--- a/html/user/detalheInstalacao.html
+++ b/html/user/detalheInstalacao.html
@@ -1,6 +1,7 @@
 <div id="tela" name="detalheInstalacao">
 </div>
 <div id="idinstalacao" class="hidden">
+<img id="imginstalacao" class="img-instalacao" src="">
 </div>
 <div id="nome" class="titdesc hidden">
 	DESCRIÇÃO
